--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@ layout: default
   <div class="container main">
     <div class="row">
       <header>
-        <center><span itemprop="name"><h1>{{ page.title }}</h1></span></center>
+        <center><span itemprop="name"><h1>{% if page.posttitle %}{{ page.posttitle }}{% else %}{{ page.title }}{% endif %}</h1></span></center>
         <center><p>{{ page.date | date: "%-d %b %Y" }}</p></center>
       </header>
     </div>
